[project]
name = "regrace"
version = "1.0.0"
description = "A Robust and Efficient Graph-based Re-localization Algorithm using Consistency Evaluation"
authors = [
    {name = "Debora Oliveira", email = "debora.oliveira@tum.de"},
]
dependencies = [
    "torch==2.0.1",
    "click>=8.1.7",
    "torch-geometric>=2.4.0",
    "wandb>=0.16.3",
    "torch-scatter>=2.1.2",
    "matplotlib>=3.8.3",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.0.0%2Bcu117/torch_scatter-2.1.2%2Bpt20cu117-cp311-cp311-linux_x86_64.whl",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.0.0%2Bcu117/torch_sparse-0.6.18%2Bpt20cu117-cp311-cp311-linux_x86_64.whl",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.0.0%2Bcu117/torch_cluster-1.6.3%2Bpt20cu117-cp311-cp311-linux_x86_64.whl",
    "tailwind-colors>=1.2.1",
    "pydantic>=2.7.0",
    "kaleido==0.2.1",
    "pytorch-metric-learning>=2.5.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "tabulate>=0.9.0",
    "fastparquet>=2024.5.0",
    "numpy==1.*",
    "open3d>=0.18.0",
    "numba>=0.61.0",
    "spconv-cu120>=2.3.6",
    "strictyaml>=1.7.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
]
[tool.pdm]
distribution = false
